# cpp_game_dev_templates

./: .gitignore  README.md
chess_test/: CMakeLists.txt
cli_01/: CMakeLists.txt  README.md
cli_01/src/: main.cpp
docs/linux/: setup.md
docs/win/: setup.md
sdl2_01/: CMakeLists.txt
sdl2_01/src/: main.cpp
sdl2_02/: CMakeLists.txt  install.sh
sdl2_02/src/: main.cpp
sdl2_test/: CMakeLists.txt
sdl2_test/src/: main.cpp
sfml_01/: conf.json
sfml_01/include/: Config.h
sfml_01/res/: fake.txt
sfml_01/src/: Config.cpp
sfml_test/: CMakeLists.txt
sfml_test/src/: main.cpp
template/: CMakeLists.txt
template/src/: main.cpp
